--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Git 101</title>
 </head>
 <body>
+                <div class="container">
+                    <h2>this is my first GIT</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic, suscipit!</p>
+                </div>
 
-    <h1>Git - First-Time </h1>
-    <p>Test add on</p>
-    
-    <h2>test</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem, necessitatibus optio. A architecto rerum voluptatum nemo dolorum ex, modi obcaecati ipsa! Esse dolor eos ab natus, illum accusantium maxime vel!</p>
+
+
 </body>
 </html>
